{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 32,
  "lineage": "dc417e61-7087-0493-e38a-6a19592f795b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:network-acl/acl-09b49a285f2a4b593",
            "default_network_acl_id": "acl-09b49a285f2a4b593",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09b49a285f2a4b593",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "634215651639",
            "subnet_ids": [
              "subnet-01c9722e11c71a215",
              "subnet-03760f707a05776fe",
              "subnet-03aa096348c15539c",
              "subnet-06357c57bbb0f5d40",
              "subnet-070b34b636f8c3953",
              "subnet-08d837d6e8769b0cb"
            ],
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:route-table/rtb-091b233e6ecee506c",
            "default_route_table_id": "rtb-091b233e6ecee506c",
            "id": "rtb-091b233e6ecee506c",
            "owner_id": "634215651639",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:security-group/sg-04453542dfa0aab75",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04453542dfa0aab75",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "634215651639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ef307565fac5f1b",
            "arn": "arn:aws:ec2:us-east-1:634215651639:elastic-ip/eipalloc-05ef307565fac5f1b",
            "domain": "vpc",
            "id": "eipalloc-05ef307565fac5f1b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-86-30-51.compute-1.amazonaws.com",
            "public_ip": "54.86.30.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0772b22e1bbc4b035",
            "arn": "arn:aws:ec2:us-east-1:634215651639:elastic-ip/eipalloc-0772b22e1bbc4b035",
            "domain": "vpc",
            "id": "eipalloc-0772b22e1bbc4b035",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-215-13-217.compute-1.amazonaws.com",
            "public_ip": "18.215.13.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01391d0e5898a0db6",
            "arn": "arn:aws:ec2:us-east-1:634215651639:elastic-ip/eipalloc-01391d0e5898a0db6",
            "domain": "vpc",
            "id": "eipalloc-01391d0e5898a0db6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-54-109-236.compute-1.amazonaws.com",
            "public_ip": "52.54.109.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:internet-gateway/igw-00846e7b4cbdcf9ec",
            "id": "igw-00846e7b4cbdcf9ec",
            "owner_id": "634215651639",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ef307565fac5f1b",
            "association_id": "eipassoc-06cb9060f624e8d88",
            "connectivity_type": "public",
            "id": "nat-024ed7bf0b32a63cb",
            "network_interface_id": "eni-0d0bc8fa53e150cc6",
            "private_ip": "10.0.1.59",
            "public_ip": "54.86.30.51",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d837d6e8769b0cb",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0772b22e1bbc4b035",
            "association_id": "eipassoc-0ff0c11a84adcf88f",
            "connectivity_type": "public",
            "id": "nat-07ac42ed09284fede",
            "network_interface_id": "eni-01f1d04b53d0fe4cb",
            "private_ip": "10.0.2.136",
            "public_ip": "18.215.13.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06357c57bbb0f5d40",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01391d0e5898a0db6",
            "association_id": "eipassoc-0e27e1eca1803797e",
            "connectivity_type": "public",
            "id": "nat-0efe6e5f6ad644471",
            "network_interface_id": "eni-01392a947944fb41f",
            "private_ip": "10.0.3.143",
            "public_ip": "52.54.109.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03760f707a05776fe",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb40bb88c6505d9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-024ed7bf0b32a63cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb40bb88c6505d9f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04e8c055013a98a571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07ac42ed09284fede",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e8c055013a98a57",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06b5a44bf1fbd0ac51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0efe6e5f6ad644471",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b5a44bf1fbd0ac5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00846e7b4cbdcf9ec",
            "id": "r-rtb-070bae3697b09f71d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070bae3697b09f71d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:route-table/rtb-0cb40bb88c6505d9f",
            "id": "rtb-0cb40bb88c6505d9f",
            "owner_id": "634215651639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c95f5425578879"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:route-table/rtb-04e8c055013a98a57",
            "id": "rtb-04e8c055013a98a57",
            "owner_id": "634215651639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c95f5425578879"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:route-table/rtb-06b5a44bf1fbd0ac5",
            "id": "rtb-06b5a44bf1fbd0ac5",
            "owner_id": "634215651639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c95f5425578879"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:route-table/rtb-070bae3697b09f71d",
            "id": "rtb-070bae3697b09f71d",
            "owner_id": "634215651639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-046c95f5425578879"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0084fbe8b5069f537",
            "route_table_id": "rtb-0cb40bb88c6505d9f",
            "subnet_id": "subnet-070b34b636f8c3953"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d5a1e1f337a281c",
            "route_table_id": "rtb-04e8c055013a98a57",
            "subnet_id": "subnet-01c9722e11c71a215"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001449fe5472aa2cb",
            "route_table_id": "rtb-06b5a44bf1fbd0ac5",
            "subnet_id": "subnet-03aa096348c15539c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f35e5a20fb3bc8e",
            "route_table_id": "rtb-070bae3697b09f71d",
            "subnet_id": "subnet-08d837d6e8769b0cb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0528ac4d398fed4a4",
            "route_table_id": "rtb-070bae3697b09f71d",
            "subnet_id": "subnet-06357c57bbb0f5d40"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0903e51c7da6b8f35",
            "route_table_id": "rtb-070bae3697b09f71d",
            "subnet_id": "subnet-03760f707a05776fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:subnet/subnet-070b34b636f8c3953",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070b34b636f8c3953",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634215651639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:subnet/subnet-01c9722e11c71a215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c9722e11c71a215",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634215651639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:subnet/subnet-03aa096348c15539c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa096348c15539c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634215651639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:subnet/subnet-08d837d6e8769b0cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d837d6e8769b0cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634215651639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:subnet/subnet-06357c57bbb0f5d40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06357c57bbb0f5d40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634215651639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:subnet/subnet-03760f707a05776fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03760f707a05776fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634215651639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-046c95f5425578879"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634215651639:vpc/vpc-046c95f5425578879",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b49a285f2a4b593",
            "default_route_table_id": "rtb-091b233e6ecee506c",
            "default_security_group_id": "sg-04453542dfa0aab75",
            "dhcp_options_id": "dopt-09b68f3eb00f51d3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046c95f5425578879",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091b233e6ecee506c",
            "owner_id": "634215651639",
            "tags": {
              "Evironment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Evironment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}